<resources>
    <string name="app_name">Eventos</string>

    <string name="data_nascimento">Data de Nascimento</string>
    <string name="hint_nome_usuario_cadastro">Nome Completo</string>
    <string name="hint_email_usuario_cadastro">E-mail válido</string>
    <string name="hint_data_nascimento_cadastro">dd/mm/AAAA</string>
    <string name="sexo">SEXO</string>
    <string name="hint_telefone_cadastro">(DD)XXXXX-XXXX</string>
    <string name="telefone">Telefone</string>
    <string name="registrar_conta">Registrar Conta</string>
    <string name="link_login">Já é cadastrado? Então faça login.</string>
    <string-array name="array_sexo_spinner">
        <item> </item>
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outro</item>
        <item>Prefiro não declarar</item>
    </string-array>
    <string name="hint_senha_login">Senha</string>
    <string name="hint_email_login">E-mail</string>
    <string name="login">Login</string>
    <string name="link_cadastrar">Clique aqui para se cadastrar</string>
    <string name="link_recuperar">Recuperar conta ou senha</string>

    <string name="title_activity_menu">Menu</string>
    <string name="title_listar_eventos">Listar Eventos</string>
    <string name="title_alterar_perfil">Alterar Perfil</string>
    <string name="title_alterar_senha">Alterar Senha</string>
    <string name="title_sair">Sair</string>
    <string name="title_localizar">Localizar Eventos</string>

    <string name="hint_nome_cadastro">Nome do Evento</string>
    <string name="hint_data_inicio">Data de ínicio</string>
    <string name="hint_data_final">Data final</string>
    <string name="hint_descricao">Descrição do Evento</string>
    <string name="txt_lotacao">Lotação Máxima</string>
    <string name="hint_endereco">Endereço do Evento</string>
    <string name="horario_inicio">Horário de ínicio</string>
    <string name="horario_final">Horário final</string>
    <string name="txt_valor">Valor</string>
    <string name="btn_cadastrar_evento">Criar Evento</string>

    <string name="hint_btn_recuperar">Recuperar conta/senha</string>

    <string name="hint_senha_atual">Senha Atual</string>
    <string name="hint_senha_nova">Nova Senha</string>
    <string name="hint_senha_confirmar">Confirmar Senha</string>
    <string name="hint_alterar_senha">Alterar Senha</string>
    <string name="listar_pendentes">Pendentes</string>
    <string name="listar_ativos">Acontecendo</string>
    <string name="listar_finalizados">Finalizados</string>

    <string name="btn_alterar">Alterar dados</string>
    <string name="link_desativar">Desativar conta</string>
    <string name="mais_info">Mais Infor..</string>
</resources>
