<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_localizar"
            android:checked="true"
            android:title="@string/title_localizar"
            android:icon="@drawable/ic_search_black_24dp"
            />
        <item
            android:id="@+id/nav_listareventos"
            android:title="@string/title_listar_eventos"
            android:icon="@drawable/ic_list_black_24dp"/>
        <item
            android:id="@+id/nav_alterarperfil"
            android:title="@string/title_alterar_perfil"
            android:icon="@drawable/ic_account_box_black_24dp"/>
        <item
            android:id="@+id/nav_alterarsenha"
            android:title="@string/title_alterar_senha"
            android:icon="@drawable/ic_vpn_key_black_24dp"/>
        <item
            android:id="@+id/nav_sair"
            android:title="@string/title_sair"
            android:icon="@drawable/ic_exit_to_app_black_24dp"/>

    </group>
</menu>
