<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.eventos.activity.CadastroUsuarioActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nome_evento_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome_cadastro"
                android:layout_marginBottom="10dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">
                <TableRow >
                    <TextView
                        android:textSize="16sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/hint_data_inicio"/>
                    <TextView
                        android:textSize="16sp"
                        android:text="@string/hint_data_final"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        />
                </TableRow>
                <TableRow>
                    <Button
                        android:id="@+id/btn_data_inicio_evento_cadastro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/btn_data_fim_evento_cadastro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>
            </TableLayout>
            <EditText
                android:id="@+id/descricao_evento_cadastro"
                android:layout_width="match_parent"
                android:hint="@string/hint_descricao"
                android:layout_height="80dp"
                android:inputType="textMultiLine"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/endereco_evento_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_endereco"
                android:layout_marginBottom="10dp"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">
                <TableRow android:layout_marginBottom="20dp">
                    <TextView
                        android:text="@string/txt_lotacao"
                        android:textAlignment="center"/>
                    <EditText
                        android:id="@+id/lotacao_evento_cadastro"
                        android:inputType="number"/>
                </TableRow>
                <TableRow android:layout_marginBottom="20dp">
                    <TextView
                        android:textSize="16sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/horario_inicio"/>
                    <TextView
                        android:textSize="16sp"
                        android:text="@string/horario_final"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        />
                </TableRow>
                <TableRow android:layout_marginBottom="20dp">
                    <Button
                        android:id="@+id/btn_horario_inicio_evento_cadastro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/btn_horario_fim_evento_cadastro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/txt_valor"
                        android:textAlignment="center"/>
                    <EditText
                        android:id="@+id/valor_evento_cadastro"
                        android:inputType="numberDecimal"/>
                </TableRow>
            </TableLayout>
            <Button
                android:text="@string/btn_cadastrar_evento"
                android:id="@+id/cadastrar_evento"
                android:layout_width="match_parent"
                android:background="@drawable/botao_customizado"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>