<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eventos.fragment.AlterarPerfilFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nome_usuario_alterar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_nome_usuario_cadastro"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_nascimento"
                />

            <Button
                android:id="@+id/data_nascimento_usuario_alterar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"/>

            <Spinner
                android:id="@+id/spinner_sexo_alterar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefone"
                />

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/telefone_usuario_alterar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="numberDecimal"
                android:padding="10dp"
                app:mask="(##)#####-####"
                android:hint="@string/hint_telefone_cadastro"/>

            <!-- Botão de Alterar -->

            <Button
                android:id="@+id/btn_alterar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/botao_customizado"
                android:text="@string/btn_alterar"/>

            <!-- Botão que para desativar conta -->

            <Button
                android:id="@+id/btn_link_desativar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/link_desativar"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
